<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?android:colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".registration.LoginActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vGuideline97.5percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.975" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vGuideline2.5percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.025" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:paddingBottom="0dp"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/passwordInputLayout"
            app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toBottomOf="@+id/loginTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/font"
                style="@style/p3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/gray10" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:paddingBottom="0dp"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/signInButton"
            app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/p3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray10" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/loginTextView"
            style="@style/title_font"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            style="@style/p2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@color/gray30"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/googleButton"
            style="@style/p3"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/gray30"
            android:drawableEnd="@drawable/google_icon"
            android:paddingStart="@dimen/_50sdp"
            android:paddingEnd="@dimen/_50sdp"
            android:text="@string/sign_in_with_google"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toBottomOf="@+id/signInButton" />

        <TextView
            android:id="@+id/asGuest"
            style="@style/p3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_as_guest"
            android:textColor="@color/black"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/googleButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/doNotHaveAccount"
            style="@style/p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/asGuest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/signUp"
            style="@style/p3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textColor="@color/orange"
        app:layout_constraintTop_toBottomOf="@+id/doNotHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:indeterminateTint="@color/orange"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
