<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:ignore="SpeakableTextPresentCheck"
    android:background="?android:colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        tools:context=".authenticationandaccount.presentation.signup.view.SignUpFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backImageView"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:paddingBottom="0dp"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toBottomOf="@+id/backImageView">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/p3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/gray10" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInputLayout"
            style="@style/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:paddingBottom="0dp"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/p3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/username"
                android:textColor="@color/black"
                android:textColorHint="@color/gray10" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:paddingBottom="0dp"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toBottomOf="@+id/usernameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/p3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray10" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            style="@style/p2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@color/gray30"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

        <TextView
            android:id="@+id/alreadyHaveAnAccount"
            style="@style/p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/gray10"
            android:layout_marginTop="@dimen/_50sdp"

            app:layout_constraintEnd_toEndOf="@+id/vGuideline97.5percent"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vGuideline97.5percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.975" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vGuideline2.5percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.025" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:indeterminateTint="@color/orange"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
