<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".meals.mainmealsfragment.view.MealsFragment"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/addToCacheFloatingButton"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/circle_shape"
        android:elevation="@dimen/_5sdp"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_favorite_24" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_30sdp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/vGuideline97.5percent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.975" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/vGuideline2.5percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.025" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/backImageView"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:scaleType="center"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
                    app:layout_constraintTop_toTopOf="parent" />


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/mealImage"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:elevation="@dimen/_10sdp"
                    android:src="@drawable/icon"
                    app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
                    app:layout_constraintTop_toBottomOf="@+id/backImageView" />

                <TextView
                    android:id="@+id/mealNameTextView"
                    style="@style/title_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/hello"
                    android:textColor="@color/gray30"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/areaTextView"
                    app:layout_constraintStart_toStartOf="@+id/mealImage"
                    app:layout_constraintTop_toBottomOf="@+id/mealImage" />


                <TextView
                    android:id="@+id/instructionsTextView"
                    style="@style/p3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/description"
                    android:textAlignment="textStart"
                    android:textColor="@color/gray30"
                    app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
                    app:layout_constraintTop_toBottomOf="@+id/instructionsHeaderTextView" />

                <TextView
                    android:id="@+id/instructionsHeaderTextView"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/instructions_header"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
                    app:layout_constraintTop_toBottomOf="@+id/mealNameTextView" />


                <TextView
                    android:id="@+id/ingredientsTextView"
                    style="@style/p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:text="@string/Ingredients"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
                    app:layout_constraintTop_toBottomOf="@+id/youtubePlayerView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ingredientsRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_25sdp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
                    app:layout_constraintStart_toStartOf="@+id/ingredientsTextView"
                    app:layout_constraintTop_toBottomOf="@+id/ingredientsTextView"
                    tools:listitem="@layout/ingredients" />

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtubePlayerView"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginTop="36dp"
                    app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
                    app:layout_constraintTop_toBottomOf="@+id/instructionsTextView" />


                <TextView
                    android:id="@+id/areaTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray30"
                    android:layout_marginStart="@dimen/_15sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/mealNameTextView"
                    app:layout_constraintEnd_toEndOf="@+id/mealImage"
                    app:layout_constraintStart_toEndOf="@+id/mealNameTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>